[package]
name = "adventofcode_2016"
version = "0.1.0"
authors = ["MarcusTL12 <marcuspaafjellet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = ""
lazy_static = ""
arrayvec = ""
itertools = ""
regex = ""
md5 = ""
vec_linked_list = {git = "https://github.com/MarcusTL12/VecLinkedList_Rust", branch = "Dev"}
