[package]
name = "adventofcode_2016"
version = "0.1.0"
authors = ["MarcusTL12 <marcuspaafjellet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
lazy_static = "1.4"
arrayvec = "0.7"
itertools = "0.10"
regex = "1.5"
md5 = "0.7"
vec_linked_list = {git = "https://github.com/MarcusTL12/VecLinkedList_Rust", branch = "Dev"}
